--- a/Testing/Views/Product/Index.cshtml
+++ b/Testing/Views/Product/Index.cshtml
@@ -1,6 +1,11 @@
 ﻿@model IEnumerable<Product>
 
 <h2>Products</h2>
+
+<div style="display: block">
+    <a href="/Product/InsertProduct/">Create a New Product</a>
+</div>
+
 <table class="table">
     <tr>
         <th>ID</th>
@@ -15,7 +20,7 @@
     {
         <tr>
             <td><a href=/Product/ViewProduct/@product.ProductID>@product.ProductID</a></td>
-            <td>@product.Name</td>
+            <td><a href=/Product/ViewProduct/@product.ProductID>@product.Name</a></td>
             <td>@product.Price</td>
             <td>@product.CategoryID</td>
             <td>@product.OnSale</td>
